--- a/bonus_part/Makefile
+++ b/bonus_part/Makefile
@@ -77,7 +77,7 @@ RM		= rm -Rf
 
 CC		= cc -I $(INC_DIR) -MMD
 
-CFLAGS	= -Wall -Wextra -Werror
+CFLAGS	= -Wall -Wextra -Werror -g3
 
 LIBFLAGS	= -Lmlx_linux -lmlx_Linux -L/usr/lib -Imlx_linux -lXext -lX11 -lm -lz
 
